tests/contract_testcases/substrate/tags/variables.sol

        contract c {
            /// @param
            int x;
        }
// ---- Expect: diagnostics ----
// error: 3:18-4:1: tag '@param' is not valid for state variable
